<resources>

    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="About_us">About us</string>
    <string name="Background">Background</string>
    <string name="Font_Color">Font Color</string>
    <string name="Font_Style">Font Style</string>
    <string name="LOADING">Loading...</string>
    <string name="More_apps">More Apps</string>
    <string name="Rate_app">Rate App</string>
    <string name="Share_app">Share App</string>
    <string name="Theme">Theme</string>
    <string name="Transition">Transition</string>
    <string name="accept">Accept</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">J7 Launcher</string>
    <string name="batteryTimeLabel">BATTERY LEVEL</string>
    <string name="battery_life">BATTERY LIFE</string>
    <string name="battery_stats">BATTERY STATS</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default_title">"Here's a message!"</string>
    <string name="dialog_ok">OK</string>
    <string name="done_button">DONE</string>
    <string name="download_wallpaper">Download</string>
    <string name="health_txt">HEALTH</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_btn_save">Save</string>
    <string name="lbl_gallery_name">Gallery directory name</string>
    <string name="lbl_google_username">Google username</string>
    <string name="lbl_no_grid_columns">Number of grid columns</string>
    <string name="msg_unknown_error">Sorry! Unknown error occurred.</string>
    <string name="msg_wall_fetch_error">"Sorry! Device doesn't have internet connection."</string>
    <string name="set_wallpaper">Set as Wallpaper</string>
    <string name="skip_button">SKIP</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="technology_txt">TECH</string>
    <string name="temp_txt">TEMPERATURE</string>
    <string name="title_activity_apps_list">AppsListActivity</string>
    <string name="title_activity_font_color_selection">FontColorSelection</string>
    <string name="title_activity_font_selection">FontSelection</string>
    <string name="title_activity_full_screen_view">FullScreenViewActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_sort">SortActivity</string>
    <string name="title_activity_theme_selection">ThemeSelection</string>
    <string name="title_activity_transition_selection">TransitionSelection</string>
    <string name="title_activity_windows_launcher">WindowsLauncher</string>
    <string name="toast_enter_gallery_name">Please enter gallery directory name</string>
    <string name="toast_enter_google_username">Please enter google username</string>
    <string name="toast_enter_valid_grid_columns">Please enter valid number of columns</string>
    <string name="toast_saved">Wallpapaer saved to #</string>
    <string name="toast_saved_failed">Sorry! Failed to save wallpaper</string>
    <string name="toast_wallpaper_set">Wallpapaer changed!</string>
    <string name="toast_wallpaper_set_failed">Sorry! Unable to set wallpapaer</string>
    <string name="toast_wallpaper_shared_failed">Sorry! Unable to set wallpaper</string>
    <string name="voltage_txt">VOLT</string>
</resources>
