<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:padding="10dp"
	android:layout_width="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_height="match_parent"
	>
 
    <LinearLayout 
	android:gravity="center_horizontal"
	android:orientation="vertical"
	android:id="@+id/layoutTop"
	android:background="@drawable/header_top"
	android:paddingTop="10dp"
	android:paddingBottom="10dp"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	
        <TextView
		android:textSize="17sp"
		android:textColor="@color/white"
		android:gravity="center_horizontal"
		android:id="@+id/modeLabel"
		android:padding="10dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/battery_stats" />
		
    </LinearLayout>
	
	
    <LinearLayout 
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="0dp"
	android:layout_weight="1.5">
	
        <LinearLayout 
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:background="@color/abc"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1.0">
		
            <TextView 
			android:textSize="16sp"
			android:textColor="#ffffff"
			android:id="@+id/batteryPercentLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:text="@string/battery_life" />
			
            <TextView 
			android:id="@+id/dummy2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="      " />
			
            <TextView 
			android:textSize="20sp"
			android:textColor="#ffffff"
			android:gravity="center_horizontal"
			android:id="@+id/batteryPercentValues"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
	
    <RelativeLayout
	android:orientation="vertical"
	android:background="@color/abc"
	android:layout_width="wrap_content"
	android:layout_gravity="center"
	android:layout_height="0dp"
	android:layout_weight="8.5">



		<me.itangqi.waveloadingview.WaveLoadingView
			android:id="@+id/waveLoadingView"
			android:layout_width="200dp"
			android:layout_height="200dp"
			android:layout_margin="35dp"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			app:wlv_borderWidth="3dp"
			app:wlv_borderColor="@color/colorAccent"
			app:wlv_progressValue="40"
			app:wlv_shapeType="circle"
			app:wlv_waveColor="@color/colorAccent"
			app:wlv_waveAmplitude="70.0" />

    </RelativeLayout>
	
    <LinearLayout 
	android:orientation="vertical"
	android:background="@color/abc"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_weight="0.5">
	
        <TextView 
		android:textSize="15sp"
		android:textColor="#ffffff"
		android:id="@+id/tempratureLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp"
		android:text="@string/temp_txt" />
		
        <TextView 
		android:textColor="#ffffff"
		android:id="@+id/tempratureValue"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15dp" />
		
		
    </LinearLayout>
	
	
    <RelativeLayout 
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="0dp"
	android:layout_weight="2.0">
	
        <LinearLayout 
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		
            <LinearLayout 
			android:orientation="vertical"
			android:id="@+id/healthLayout"
			android:padding="3dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:weightSum="2.0"
			android:layout_weight="1.0"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true">
			
                <TextView 
				android:textSize="12sp"
				android:textColor="#ffffff"
				android:gravity="center_horizontal"
				android:layout_gravity="center_horizontal"
				android:id="@+id/healthLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/health_txt"
				android:layout_weight="1.0"
				android:layout_alignParentTop="true" />
				
                <TextView 
				android:textSize="15sp"
				android:textColor="#ffffff"
				android:gravity="center_horizontal"
				android:id="@+id/healthValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="3dp" 
				android:layout_weight="1.0" 
				android:layout_toRightOf="@id/healthLabel"
				android:layout_alignParentTop="true" />
            </LinearLayout>
			
            <LinearLayout 
			android:orientation="vertical"
			android:id="@+id/tempLayout"
			android:padding="3dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp" 
			android:weightSum="2.0"
			android:layout_weight="1.0" 
			android:layout_below="@id/healthLayout"
			android:layout_alignParentLeft="true">
			
                <TextView 
				android:textSize="12sp"
				android:textColor="#ffffff"
				android:gravity="center_horizontal"
				android:id="@+id/technologyLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/technology_txt" 
				android:layout_weight="1.0" />
				
				
                <TextView 
				android:textSize="15sp"
				android:textColor="#ffffff"
				android:gravity="center_horizontal"
				android:id="@+id/technologyValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="3dp"
				android:layout_weight="1.0" />
            </LinearLayout>
			
            <LinearLayout 
			android:orientation="vertical"
			android:id="@+id/voltLayout"
			android:padding="3dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:weightSum="2.0"
			android:layout_weight="1.0" 
			android:layout_below="@id/tempLayout"
			android:layout_alignParentLeft="true">
			
                <TextView 
				android:textSize="12sp"
				android:textColor="#ffffff"
				android:gravity="center_horizontal"
				android:id="@+id/voltageLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/voltage_txt"
				android:layout_weight="1.0" />
				
                <TextView 
				android:textSize="15sp"
				android:textColor="#ffffff"
				android:gravity="center_horizontal"
				android:id="@+id/voltageValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="3dp"
				android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
